--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #parent{
-    text-align: center;
+    /* text-align: center;*/
 }
 th,td{
     text-align: left;
@@ -8,13 +8,35 @@ th,td{
     padding-right: 20px; 
 }
 table{
-    display: inline-block; /* または inline-table */
-    width: 100%;       /* テーブルの幅を親要素に合わせて調整 */
+    /*display: inline-block;*/ /* または inline-table */
+    /*width: 100%; */    /* テーブルの幅を親要素に合わせて調整 */
     min-width: 500px;  /* テーブルの最小幅を500pxに設定 */
     max-width: 60vw;   /* テーブルの最大幅をビューポートの80%に設定 */
+    margin: 0 auto; /*中央揃え*/
 }
 #myList {
     width: 600px; /* 横幅を 600px に指定 */
     max-width: 100%; /* 横幅が画面からはみ出さないようにする */
     margin: 0 auto; /*中央揃え*/
+    padding-left: 20px;
+}
+
+#myList ul{
+  padding-left: 20px;
+}
+
+#changeViewButton{
+    margin-bottom: 10px;
+}
+#colorSettingArea{
+    margin-bottom: 10px;
+    text-align: center;
+}
+#buttonArea{
+    text-align: center;
+    margin-bottom: 10px;
+}
+#indentTargetColorArea{
+   margin-bottom: 10px;
+    text-align: center;
 }
