--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@ table{
     text-align: center;
     margin-bottom: 10px;
 }
+
+#colorFilterArea{
+    text-align: center;
+}
+#colorFilterArea label{
+    padding: 0 10px;
+}
